Class App changes week 4

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -43,13 +43,48 @@ ul, li {
     margin-top: 50px;
 }
 
-.content{
+.center {
+
     display: flex;
-    margin-top: 50px;
-    min-height: 100%;
-    width:100%;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 200px;
+    padding: 25px;
+    border-radius: 20px;
+    border: 1px solid #d3d3d3;
 }
+
+.center form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+label {
+    padding-bottom: 20px;
+    width: 80%;
+  }
+
+label > span {
+    display: none;
+  }
+
+input {
+    height: 20px;
+    width: 100%;
+  }
+
+  button {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    width: 100px;
+    background-color: #256fde;
+    color: white;
+    margin-bottom: 10px;
+  }
 
 .login{
     display: flex;
