--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,36 @@
 * {
     margin: 0;
     padding: 0;
-}   
-
-header {
-    height:50px; 
-    width:100%;
-}
-
-nav {
-    display: block;
-}
-
-nav ul {
-    float: left;
-    width:200px;
-    margin:0 auto;
-}
-
-ul, li {
+  }
+  
+  .main {
+    min-height: 100%;
+    width: 100%;
+  }
+  
+  header {
+    height: 50px;
+    width: 100%;
+    background-color: lightgrey;
+  }
+  
+  li {
+    padding: 0 10px;
+    width: 50px;
+  }
+  
+  ul,
+  li {
     list-style: none;
-
-}
-
-.main {
-    min-height:100%;
-    overflow: hidden;
-    position: relative;
-    
-}
-
-footer {
-    height:100px;
-    width:100%;
+  }
+  
+  h2 {
+    padding-bottom: 20px;
+  }
+  
+  footer {
     position: absolute;
     bottom: 0;
-}
+    height: 100px;
+    width: 100%;
+  }
