--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+.header-extras {
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+}
+
 .center {
   position: fixed; /* or absolute */
   top: 50%;
